--- a/series.conf
+++ b/series.conf
@@ -20052,6 +20052,7 @@
 	patches.suse/wifi-iwlwifi-replace-ENOTSUPP-with-EOPNOTSUPP.patch
 	patches.suse/Bluetooth-ISO-Reassociate-a-socket-with-an-active-BI.patch
 	patches.suse/Bluetooth-qca-Set-both-WIDEBAND_SPEECH-and-LE_STATES.patch
+	patches.suse/Bluetooth-hci_core-Remove-le_restart_scan-work.patch
 	patches.suse/Bluetooth-Fix-bogus-check-for-re-auth-no-supported-w.patch
 	patches.suse/Bluetooth-ISO-Avoid-creating-child-socket-if-PA-sync.patch
 	patches.suse/Bluetooth-hci_conn-Check-non-NULL-function-before-ca.patch
