--- a/series.conf
+++ b/series.conf
@@ -23018,6 +23018,7 @@
 	patches.suse/Bluetooth-af_bluetooth-Fix-deadlock.patch
 	patches.suse/Bluetooth-btnxpuart-Fix-btnxpuart_close.patch
 	patches.suse/Bluetooth-btmtk-Add-MODULE_FIRMWARE-for-MT7922.patch
+	patches.suse/Bluetooth-mgmt-remove-NULL-check-in-mgmt_set_connect.patch
 	patches.suse/Bluetooth-Add-new-quirk-for-broken-read-key-length-o.patch
 	patches.suse/Bluetooth-ISO-Align-broadcast-sync_timeout-with-conn.patch
 	patches.suse/Bluetooth-Fix-eir-name-length.patch
