--- a/series.conf
+++ b/series.conf
@@ -23398,6 +23398,7 @@
 	patches.suse/xen-events-fix-delayed-eoi-list-handling.patch
 	patches.suse/tty-Fix-uninit-value-access-in-ppp_sync_receive.patch
 	patches.suse/netfilter-nf_tables-fix-pointer-math-issue-in-nft_by.patch
+	patches.suse/netfilter-nf_tables-split-async-and-sync-catchall-in-two-f.patch
 	patches.suse/ALSA-hda-realtek-Add-Dell-ALC295-to-pin-fall-back-ta.patch
 	patches.suse/ALSA-hda-realtek-Enable-Mute-LED-on-HP-255-G8.patch
 	patches.suse/ALSA-hda-realtek-Enable-internal-speaker-of-ASUS-K65.patch
