--- a/blacklist.conf
+++ b/blacklist.conf
@@ -970,3 +970,4 @@ c0e473a0d226479e8e925d5ba93f751d8df628e9 # CVE-2025-38073 https://bugzilla.suse.
 a82b26451de126a5ae130361081986bc459afe9b # not applicable
 37733bffda3285d18bd1d72c14b3a1cf39c56a5e # cleanup breaking kABI
 ab680dc6c78aa035e944ecc8c48a1caab9f39924 # CVE-2025-37907 https://bugzilla.suse.com/show_bug.cgi?id=1243464#c14
+6a07e3af4973402fa199a80036c10060b922c92c # CVE-2025-38331 bsc#1246345: WONTFIX, unsupported
