--- a/blacklist.conf
+++ b/blacklist.conf
@@ -423,3 +423,4 @@ cbeaa41dfe26b72639141e87183cb23e00d4b0dd # rust
 86bc9c742426a16b52a10ef61f5b721aecca2344 # CVE-2025-38280, does not affect our kernel, https://bugzilla.suse.com/show_bug.cgi?id=1246270#c1
 8d2da07c813ad333c20eb803e15f8c4541f25350 # not a real fix, but breaking kABI
 a85b8544d46390469b6ca72d6bfd3ecb7be985ff # ieee80211: cosmetic change, causing kABI breakage
+6a07e3af4973402fa199a80036c10060b922c92c # CVE-2025-38331 bsc#1246345: WONTFIX, unsupported
