--- a/series.conf
+++ b/series.conf
@@ -30646,6 +30646,7 @@
 	patches.suse/scsi-mpi3mr-Fix-possible-crash-when-setting-up-bsg-f.patch
 	patches.suse/scsi-lpfc-convert-timeouts-to-secs_to_jiffies.patch
 	patches.suse/wifi-ath11k-convert-timeouts-to-secs_to_jiffies.patch
+	patches.suse/bluetooth-mgmt-convert-timeouts-to-secs_to_jiffies.patch
 	patches.suse/ocfs2-handle-a-symlink-read-error-correctly.patch
 	patches.suse/lib-inflate.c-remove-dead-code.patch
 	patches.suse/ocfs2-mark-dquot-as-inactive-if-failed-to-start-trans-while-releasing-dquot.patch
