--- a/series.conf
+++ b/series.conf
@@ -33734,6 +33734,7 @@
 	patches.kabi/drm_framebuffer-kabi-workaround.patch
 	patches.kabi/bluetooth-hci_dev-kabi-workaround.patch
 	patches.kabi/bluetooth-restore-le_scan_restart-in-struct-hci_dev.patch
+	patches.kabi/hci_dev-centralize-extra-lock.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
