--- a/series.conf
+++ b/series.conf
@@ -9756,6 +9756,7 @@
 	patches.suse/Bluetooth-btintel_pcie-Increase-the-tx-and-rx-descri.patch
 	patches.suse/Bluetooth-btintel_pcie-Reduce-driver-buffer-posting-.patch
 	patches.suse/Bluetooth-MGMT-Fix-UAF-on-mgmt_remove_adv_monitor_co.patch
+	patches.suse/Bluetooth-MGMT-Protect-mgmt_pending-list-with-its-ow.patch
 	patches.suse/net-Fix-TOCTOU-issue-in-sk_is_readable.patch
 	patches.suse/net-mdiobus-Fix-potential-out-of-bounds-read-write-a.patch
 	patches.suse/net-mdiobus-Fix-potential-out-of-bounds-clause-45-re.patch
