--- a/series.conf
+++ b/series.conf
@@ -32921,6 +32921,7 @@
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-a.patch
 	patches.suse/NFC-nci-uart-Set-tty-disc_data-only-in-success-path.patch
 	patches.suse/net-atm-add-lec_mutex.patch
+	patches.suse/net-atm-fix-proc-net-atm-lec-handling.patch
 	patches.suse/wifi-mac80211-drop-invalid-source-address-OCB-frames.patch
 	patches.suse/wifi-ath6kl-remove-WARN-on-bad-firmware-input.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
