--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1003,3 +1003,4 @@ cefcd4fe2e3aaf792c14c9e56dab89e3d7a65d02 # CVE-2024-35803 not applicable https:/
 e51aded92d42784313ba16c12f4f88cc4f973bbb # CVE-2024-50059 not applicable https://bugzilla.suse.com/show_bug.cgi?id=1232345#c2
 6aacd1484468361d1d04badfe75f264fa5314864 # CVE-2024-57843 not applicable https://bugzilla.suse.com/show_bug.cgi?id=1235816#c2
 5356266552bbaaddb8d6b4b53450e290be2cd717 # CVE-2022-49138 duplicate with f48735a9aaf8258f39918e13adf464ccd7dce33b
+bbf9ac34677b57506a13682b31a2a718934c0e31 # CVE-2024-36911 https://bugzilla.suse.com/show_bug.cgi?id=1225745#c41
