--- a/series.conf
+++ b/series.conf
@@ -50239,6 +50239,7 @@
 	patches.suse/tracing-Prevent-bad-count-for-tracing_cpumask_write.patch
 	patches.suse/powerpc-pseries-vas-Add-close-callback-in-vas_vm_ops.patch
 	patches.suse/power-supply-gpio-charger-Fix-set-charge-current-lim.patch
+	patches.suse/io_uring-sqpoll-fix-sqpoll-error-handling-races.patch
 	patches.suse/i2c-imx-add-imx7d-compatible-string-for-applying-err.patch
 	patches.suse/i2c-microchip-core-actually-use-repeated-sends.patch
 	patches.suse/i2c-microchip-core-fix-ghost-detections.patch
