--- a/series.conf
+++ b/series.conf
@@ -8611,6 +8611,7 @@
 	patches.suse/drm-xe-Add-page-queue-multiplier.patch
 	patches.suse/drm-xe-tests-mocs-Hold-XE_FORCEWAKE_ALL-for-LNCF-reg.patch
 	patches.suse/smb-client-Avoid-race-in-open_cached_dir-with-lease-breaks.patch
+	patches.suse/__legitimize_mnt-check-for-MNT_SYNC_UMOUNT-should-be.patch
 	patches.suse/xen-swiotlb-Use-swiotlb-bouncing-if-kmalloc-allocati.patch
 	patches.suse/xenbus-Allow-PVH-dom0-a-non-local-xenstore.patch
 	patches.suse/xenbus-Use-kref-to-track-req-lifetime.patch
