--- a/series.conf
+++ b/series.conf
@@ -9131,6 +9131,7 @@
 	patches.suse/drm-msm-a6xx-Disable-rgb565_predicator-on-Adreno-7c3.patch
 	patches.suse/drm-i915-dp_mst-Work-around-Thunderbolt-sink-disconn.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
+	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
 	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
