--- a/series.conf
+++ b/series.conf
@@ -32587,6 +32587,7 @@
 	patches.suse/drm-msm-gpu-Fix-crash-when-throttling-GPU-immediatel.patch
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
+	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
 	patches.suse/nfsd-Initialize-ssc-before-laundromat_work-to-prevent-NULL-dereference.patch
 	patches.suse/dlm-mask-sk_shutdown-value.patch
