--- a/series.conf
+++ b/series.conf
@@ -33087,6 +33087,7 @@
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
 	patches.suse/pinctrl-qcom-msm-mark-certain-pins-as-invalid-for-in.patch
 	patches.suse/pinctrl-amd-Clear-GPIO-debounce-for-suspend.patch
+	patches.suse/eventpoll-don-t-decrement-ep-refcount-while-still-ho.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
