--- a/series.conf
+++ b/series.conf
@@ -32913,6 +32913,7 @@
 	patches.suse/wifi-ath11k-don-t-wait-when-there-is-no-vdev-started.patch
 	patches.suse/wifi-ath11k-move-some-firmware-stats-related-functio.patch
 	patches.suse/wifi-ath11k-validate-ath11k_crypto_mode-on-top-of-at.patch
+	patches.suse/wifi-ath12k-fix-GCC_GCC_PCIE_HOT_RST-definition-for-.patch
 	patches.suse/regulator-max20086-Fix-refcount-leak-in-max20086_par.patch
 	patches.suse/ACPI-CPPC-Fix-NULL-pointer-dereference-when-nosmp-is.patch
 	patches.suse/scsi-iscsi-Fix-incorrect-error-path-labels-for-flashnode-o.patch
