--- a/series.conf
+++ b/series.conf
@@ -33151,6 +33151,7 @@
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
 	patches.suse/usb-musb-fix-gadget-state-on-disconnect.patch
+	patches.suse/usb-gadget-configfs-Fix-OOB-read-on-empty-string-wri.patch
 	patches.suse/USB-serial-option-add-Foxconn-T99W640.patch
 	patches.suse/USB-serial-ftdi_sio-add-support-for-NDI-EMGUIDE-GEMI.patch
 	patches.suse/USB-serial-option-add-Telit-Cinterion-FE910C04-ECM-c.patch
