--- a/series.conf
+++ b/series.conf
@@ -53865,6 +53865,7 @@
 	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
 	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/io_uring-fix-use-after-free-of-sq-thread-in-__io_uri.patch
+	patches.suse/io_uring-consistently-use-rcu-semantics-with-sqpoll-.patch
 	patches.suse/nvme-always-punt-polled-uring_cmd-end_io-work-to-tas.patch
 	patches.suse/powerpc-eeh-Fix-missing-PE-bridge-reconfiguration-du.patch
 	patches.suse/x86-fred-signal-Prevent-immediate-repeat-of-single-step-tr.patch
