--- a/series.conf
+++ b/series.conf
@@ -9874,6 +9874,7 @@
 	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
 	patches.suse/drivers-rapidio-rio_cm.c-prevent-possible-heap-overw.patch
 	patches.suse/io_uring-fix-use-after-free-of-sq-thread-in-__io_uri.patch
+	patches.suse/io_uring-consistently-use-rcu-semantics-with-sqpoll-.patch
 	patches.suse/block-Clear-BIO_EMULATES_ZONE_APPEND-flag-on-BIO-completio.patch
 	patches.suse/block-don-t-use-submit_bio_noacct_nocheck-in-blk_zone_wplu.patch
 	patches.suse/block-use-plug-request-list-tail-for-one-shot-backmerge-at.patch
