--- a/series.conf
+++ b/series.conf
@@ -10058,6 +10058,7 @@
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
 	patches.suse/virtio-net-ensure-the-received-length-does-not-excee.patch
 	patches.suse/virtio-net-xsk-rx-fix-the-frame-s-length-check.patch
 	patches.suse/vsock-vmci-Clear-the-vmci-transport-packet-properly-.patch
