--- a/series.conf
+++ b/series.conf
@@ -33033,6 +33033,7 @@
 	patches.suse/Bluetooth-MGMT-set_mesh-update-LE-scan-interval-and-.patch
 	patches.suse/Bluetooth-MGMT-mesh_send-check-instances-prior-disab.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
+	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
 	patches.suse/scsi-core-Enforce-unlimited-max_segment_size-when-virt_bou.patch
