--- a/series.conf
+++ b/series.conf
@@ -23739,6 +23739,7 @@
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
+	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 
 	########################################################
 	# end of sorted patches
