--- a/series.conf
+++ b/series.conf
@@ -33088,6 +33088,7 @@
 	patches.suse/KVM-SVM-Reject-SEV-ES-intra-host-migration-if-vCPU-c.patch
 	patches.suse/Bluetooth-hci_sync-Fix-not-disabling-advertising-ins.patch
 	patches.suse/Bluetooth-hci_event-Fix-not-marking-Broadcast-Sink-B.patch
+	patches.suse/vsock-Fix-transport_-g2h-h2g-TOCTOU.patch
 	patches.suse/vsock-Fix-transport_-TOCTOU.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
