--- a/series.conf
+++ b/series.conf
@@ -33573,6 +33573,7 @@
 	patches.suse/net-allow-retransmitting-a-TCP-packet-if-original-is.patch
 	patches.suse/powerpc-pseries-mobility-notify-network-peers-after-.patch
 	patches.suse/netfilter-nf_tables-fix-64-bit-load-issue-in-nft_byt.patch
+	patches.suse/af_unix-Disable-MSG_OOB-for-unprivileged-users.patch
 
 	########################################################
 	# BPF
