--- a/series.conf
+++ b/series.conf
@@ -23740,6 +23740,7 @@
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
+	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.suse/usb-gadget-configfs-Fix-OOB-read-on-empty-string-wri.patch
