--- a/series.conf
+++ b/series.conf
@@ -23744,6 +23744,7 @@
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregate.patch
+	patches.suse/net-sched-Return-NULL-when-htb_lookup_leaf-encounters-an-e.patch
 	patches.suse/usb-gadget-configfs-Fix-OOB-read-on-empty-string-wri.patch
 	patches.suse/net-sched-sch_qfq-Avoid-triggering-might_sleep-in-atomic-c.patch
 
