--- a/series.conf
+++ b/series.conf
@@ -10268,6 +10268,7 @@
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/netlink-Fix-rmem-check-in-netlink_broadcast_deliver.patch
+	patches.suse/netlink-make-sure-we-allow-at-least-one-dump-skb.patch
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-xe-pf-Clear-all-LMTT-pages-on-alloc.patch
 	patches.suse/drm-xe-Allocate-PF-queue-size-on-pow2-boundary.patch
