--- a/series.conf
+++ b/series.conf
@@ -33147,6 +33147,7 @@
 	patches.suse/net-phy-microchip-limit-100M-workaround-to-link-down.patch
 	patches.suse/can-m_can-m_can_handle_lost_msg-downgrade-msg-lost-i.patch
 	patches.suse/netlink-Fix-rmem-check-in-netlink_broadcast_deliver.patch
+	patches.suse/netlink-make-sure-we-allow-at-least-one-dump-skb.patch
 	patches.suse/nbd-fix-uaf-in-nbd_genl_connect-error-path.patch
 	patches.suse/drm-tegra-nvdec-Fix-dma_alloc_coherent-error-check.patch
 	patches.suse/drm-framebuffer-Acquire-internal-references-on-GEM-h.patch
