--- a/series.conf
+++ b/series.conf
@@ -54008,6 +54008,7 @@
 	patches.suse/ASoC-amd-yc-Add-DMI-quirk-for-Lenovo-IdeaPad-Slim-5-.patch
 	patches.suse/ALSA-hda-realtek-Fix-built-in-mic-on-ASUS-VivoBook-X-7ab6847.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
+	patches.suse/io_uring-rsrc-fix-folio-unpinning.patch
 	patches.suse/drm-amd-Adjust-output-for-discovery-error-handling.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-xe-display-Add-check-for-alloc_ordered_workqueue.patch
