--- a/series.conf
+++ b/series.conf
@@ -45104,6 +45104,7 @@
 	patches.suse/nvme-fix-metadata-handling-in-nvme-passthrough.patch
 	patches.suse/block-bfq-fix-uaf-for-accessing-waker_bfqq-after-spl.patch
 	patches.suse/block-bfq-fix-procress-reference-leakage-for-bfqq-in.patch
+	patches.suse/mm-release-number-of-pages-of-a-folio.patch
 	patches.suse/block-fix-potential-invalid-pointer-dereference-in-bl.patch
 	patches.suse/nvme-tcp-fix-link-failure-for-TCP-auth.patch
 	patches.suse/nvme-pci-qdepth-1-quirk.patch
