--- a/series.conf
+++ b/series.conf
@@ -23744,6 +23744,7 @@
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/posix-cpu-timers-fix-race-between-handle_posix_cpu_timers-.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
+	patches.suse/net-atm-add-lec_mutex.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
