--- a/series.conf
+++ b/series.conf
@@ -9548,6 +9548,7 @@
 	patches.suse/selftests-mm-restore-default-nr_hugepages-value-duri.patch
 	patches.suse/sched-numa-skip-VMA-scanning-on-memory-pinned-to-one-NUMA-node-via-cpuset.mems.patch
 	patches.suse/sched-numa-add-tracepoint-that-tracks-the-skipping-of-numa-balancing-due-to-cpuset-memory-pinning.patch
+	patches.suse/mm-vmalloc-fix-data-race-in-show_numa_info.patch
 	patches.suse/mm-pcp-increase-pcp-free_count-threshold-to-trigger-free_high.patch
 	patches.suse/Squashfs-check-return-result-of-sb_min_blocksize.patch
 	patches.suse/watchdog-fix-watchdog-may-detect-false-positive-of-s.patch
