--- a/series.conf
+++ b/series.conf
@@ -9826,6 +9826,7 @@
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
 	patches.suse/ASoC-Intel-avs-Verify-content-returned-by-parse_int_.patch
 	patches.suse/genksyms-Fix-enum-consts-from-a-reference-affecting-new-va.patch
+	patches.suse/ring-buffer-Fix-buffer-locking-in-ring_buffer_subbuf_order.patch
 	patches.suse/PCI-MSI-Size-device-MSI-domain-with-the-maximum-numb.patch
 	patches.suse/x86-iopl-Cure-TIF_IO_BITMAP-inconsistencies.patch
 	patches.suse/tools-power-turbostat-Fix-AMD-package-energy-reporting.patch
