--- a/series.conf
+++ b/series.conf
@@ -32900,6 +32900,7 @@
 	patches.suse/ASoC-codecs-hda-Fix-RPM-usage-count-underflow.patch
 	patches.suse/ASoC-Intel-avs-Fix-deadlock-when-the-failing-IPC-is-.patch
 	patches.suse/ASoC-Intel-avs-Verify-content-returned-by-parse_int_.patch
+	patches.suse/do_change_type-refuse-to-operate-on-unmounted-not-ou.patch
 	patches.suse/PCI-MSI-Size-device-MSI-domain-with-the-maximum-numb.patch
 	patches.suse/x86-iopl-Cure-TIF_IO_BITMAP-inconsistencies.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
