--- a/series.conf
+++ b/series.conf
@@ -23952,6 +23952,7 @@
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
 	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
+	patches.suse/do_change_type-refuse-to-operate-on-unmounted-not-ou.patch
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
