--- a/series.conf
+++ b/series.conf
@@ -33143,6 +33143,7 @@
 	patches.suse/vsock-Fix-transport_-TOCTOU.patch
 	patches.suse/net-phy-smsc-Fix-Auto-MDIX-configuration-when-disabl.patch
 	patches.suse/net-phy-smsc-Fix-link-failure-in-forced-mode-with-Au.patch
+	patches.suse/atm-clip-Fix-potential-null-ptr-deref-in-to_atmarpd.patch
 	patches.suse/wifi-zd1211rw-Fix-potential-NULL-pointer-dereference.patch
 	patches.suse/wifi-prevent-A-MSDU-attacks-in-mesh-networks.patch
 	patches.suse/wifi-mt76-mt7925-fix-the-wrong-config-for-tx-interru.patch
