--- a/series.conf
+++ b/series.conf
@@ -34038,6 +34038,7 @@
 	patches.kabi/hci_dev-centralize-extra-lock.patch
 	patches.kabi/apple-mfi-fastcharge-protect-first-device-name.patch
 	patches.kabi/kABI-restore-layout-of-struct-msi_desc.patch
+	patches.kabi/kABI-fix-for-net-vlan-fix-VLAN-0-refcount-imbalance-.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
