--- a/series.conf
+++ b/series.conf
@@ -10291,6 +10291,7 @@
 	patches.suse/wifi-cfg80211-remove-scan-request-n_channels-counted.patch
 	patches.suse/msft-hv-3301-hv_netvsc-Set-VF-priv_flags-to-IFF_NO_ADDRCONF-befor.patch
 	patches.suse/virtio-net-fix-recursived-rtnl_lock-during-probe.patch
+	patches.suse/net-vlan-fix-VLAN-0-refcount-imbalance-of-toggling-filteri.patch
 	patches.suse/net-sched-Return-NULL-when-htb_lookup_leaf-encounter.patch
 	patches.suse/Bluetooth-Fix-null-ptr-deref-in-l2cap_sock_resume_cb.patch
 	patches.suse/Bluetooth-hci_sync-fix-connectable-extended-advertis.patch
