--- a/series.conf
+++ b/series.conf
@@ -11141,6 +11141,7 @@
 	patches.kabi/kABI-restore-layout-of-struct-msi_desc.patch
 	patches.kabi/kABI-Fix-the-module-name-type-in-audit_context.patch
 	patches.kabi/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
+	patches.kabi/kABI-fix-for-net-vlan-fix-VLAN-0-refcount-imbalance-.patch
 
 	########################################################
 	# preempt-rt backport converged
