--- a/series.conf
+++ b/series.conf
@@ -10117,6 +10117,7 @@
 	patches.suse/Bluetooth-HCI-Set-extended-advertising-data-synchron.patch
 	patches.suse/rose-fix-dangling-neighbour-pointers-in-rose_rt_devi.patch
 	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
+	patches.suse/idpf-convert-control-queue-mutex-to-a-spinlock.patch
 	patches.suse/virtio-net-ensure-the-received-length-does-not-excee.patch
 	patches.suse/virtio-net-xsk-rx-fix-the-frame-s-length-check.patch
 	patches.suse/virtio_ring-Fix-error-reporting-in-virtqueue_resize.patch
