--- a/series.conf
+++ b/series.conf
@@ -9985,6 +9985,7 @@
 	patches.suse/perf-Fix-cgroup-state-vs-ERROR.patch
 	patches.suse/perf-Fix-dangling-cgroup-pointer-in-cpuctx.patch
 	patches.suse/perf-core-Fix-WARN-in-perf_cgroup_switch.patch
+	patches.suse/perf-x86-intel-Fix-crash-in-icl_update_topdown_event.patch
 	patches.suse/mm-userfaultfd-fix-race-of-userfaultfd_move-and-swap-cache.patch
 	patches.suse/maple_tree-fix-MA_STATE_PREALLOC-flag-in-mas_preallo.patch
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
