--- a/series.conf
+++ b/series.conf
@@ -9155,6 +9155,7 @@
 	patches.suse/exfat-fix-double-free-in-delayed_free.patch
 	patches.suse/ext4-inline-fix-len-overflow-in-ext4_prepare_inline_.patch
 	patches.suse/jbd2-fix-data-race-and-null-ptr-deref-in-jbd2_journa.patch
+	patches.suse/ext4-only-dirty-folios-when-data-journaling-regular-files.patch
 	patches.suse/NFSD-unregister-filesystem-in-case-genl_register_family-fails.patch
 	patches.suse/NFSD-fix-race-between-nfsd-registration-and-exports_proc.patch
 	patches.suse/nfsd-nfsd4_spo_must_allow-must-check-this-is-a-v4-compound-request.patch
