--- a/series.conf
+++ b/series.conf
@@ -23956,6 +23956,7 @@
 	patches.suse/powerpc-powernv-memtrace-Fix-out-of-bounds-issue-in-.patch
 	patches.suse/powerpc-vas-Return-EINVAL-if-the-offset-is-non-zero-.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/posix-cpu-timers-fix-race-between-handle_posix_cpu_timers-.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
