--- a/series.conf
+++ b/series.conf
@@ -23738,6 +23738,7 @@
 	patches.suse/vgacon-Add-check-for-vc_origin-address-range-in-vgac.patch
 	patches.suse/ipc-fix-to-protect-IPCS-lookups-using-RCU.patch
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
+	patches.suse/posix-cpu-timers-fix-race-between-handle_posix_cpu_timers-.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
