--- a/series.conf
+++ b/series.conf
@@ -10084,6 +10084,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
 	patches.suse/lib-group_cpus-fix-NULL-pointer-dereference-from-gro.patch
 	patches.suse/mm-damon-sysfs-schemes-free-old-damon_sysfs_scheme_filter-.patch
+	patches.suse/smb-client-fix-potential-deadlock-when-reconnecting-channels.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/i2c-omap-Fix-an-error-handling-path-in-omap_i2c_prob.patch
