--- a/series.conf
+++ b/series.conf
@@ -28507,6 +28507,7 @@
 	patches.suse/netfilter-nf_tables-prevent-nf_skb_duplicated-corrup.patch
 	patches.suse/sctp-set-sk_state-back-to-CLOSED-if-autobind-fails-i.patch
 	patches.suse/cifs-Remove-intermediate-object-of-failed-create-reparse-call.patch
+	patches.suse/cifs-Fix-buffer-overflow-when-parsing-NFS-reparse-points.patch
 	patches.suse/btrfs-drop-the-backref-cache-during-relocation-if-we.patch
 	patches.suse/btrfs-send-fix-invalid-clone-operation-for-file-that.patch
 	patches.suse/btrfs-fix-a-NULL-pointer-dereference-when-failed-to-start-.patch
