--- a/series.conf
+++ b/series.conf
@@ -23855,6 +23855,7 @@
 	patches.suse/ALSA-6fire-Release-resources-at-card-release.patch
 	patches.suse/ovl-Filter-invalid-inodes-with-missing-lookup-functi.patch
 	patches.suse/smb-client-fix-use-after-free-of-signing-key.patch
+	patches.suse/smb-prevent-use-after-free-due-to-open_cached_dir-error-paths.patch
 	patches.suse/NFSD-Prevent-a-potential-integer-overflow.patch
 	patches.suse/nfsd-make-sure-exp-active-before-svc_export_show.patch
 	patches.suse/vfio-pci-Properly-hide-first-in-list-PCIe-extended-c.patch
