--- a/series.conf
+++ b/series.conf
@@ -34179,6 +34179,7 @@
 	patches.suse/NFSv4-flexfiles-Fix-layout-merge-mirror-check.patch
 	patches.suse/Documentation-hw-vuln-Add-VMSCAPE-documentation.patch
 	patches.suse/x86-vmscape-Enumerate-VMSCAPE-bug.patch
+	patches.suse/x86-vmscape-Add-conditional-IBPB-mitigation.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
