--- a/series.conf
+++ b/series.conf
@@ -34181,6 +34181,7 @@
 	patches.suse/x86-vmscape-Enumerate-VMSCAPE-bug.patch
 	patches.suse/x86-vmscape-Add-conditional-IBPB-mitigation.patch
 	patches.suse/x86-vmscape-Enable-the-mitigation.patch
+	patches.suse/x86-bugs-Move-cpu_bugs_smt_update-down.patch
 	patches.suse/compiler-clang.h-define-__SANITIZE_-__-macros-only-w.patch
 	patches.suse/s390-pai-Deny-all-events-not-handled-by-this-PMU.patch
 	patches.suse/s390-cpum_cf-Deny-all-sampling-events-by-counter-PMU.patch
