--- a/series.conf
+++ b/series.conf
@@ -23282,6 +23282,7 @@
 	patches.suse/0001-media-dvb-usb-az6027-fix-null-ptr-deref-in-az6027_i2.patch
 	patches.suse/0001-drm-vmwgfx-Validate-the-box-size-for-the-snooped-cur.patch
 	patches.suse/bpf-propagate-precision-in-ALU-ALU64-operations.patch
+	patches.suse/wifi-iwlwifi-mvm-fix-double-free-on-tx-path.patch
 	patches.suse/KVM-VMX-Execute-IBPB-on-emulated-VM-exit-when-guest-has-IBRS
 	patches.suse/misc-sgi-gru-fix-use-after-free-error-in-gru_set_con.patch
 	patches.suse/gfs2-Cosmetic-gfs2_dinode_-in-out-cleanup.patch
