--- a/series.conf
+++ b/series.conf
@@ -23324,6 +23324,7 @@
 	patches.suse/sched-rt-pick_next_rt_entity-check-list_entry.patch
 	patches.suse/uaccess-Add-speculation-barrier-to-copy_from_user.patch
 	patches.suse/ipv6-remove-max_size-check-inline-with-ipv4.patch
+	patches.suse/wifi-brcmfmac-Fix-potential-stack-out-of-bounds-in-b.patch
 	patches.suse/net-sched-act_mirred-better-wording-on-protection-ag.patch
 	patches.suse/act_mirred-use-the-backlog-for-nested-calls-to-mirre.patch
 	patches.suse/net-add-sock_init_data_uid.patch
