--- a/series.conf
+++ b/series.conf
@@ -24183,6 +24183,7 @@
 	patches.suse/HID-core-ensure-the-allocated-report-buffer-can-cont.patch
 	patches.suse/HID-core-do-not-bypass-hid_hw_raw_request.patch
 	patches.suse/net-sched-sch_qfq-Fix-race-condition-on-qfq_aggregate.patch
+	patches.suse/net-vlan-fix-VLAN-0-refcount-imbalance-of-toggling-filteri.patch
 	patches.suse/net-sched-Return-NULL-when-htb_lookup_leaf-encounters-an-e.patch
 	patches.suse/smb-client-fix-use-after-free-in-crypt_message-when-using-async-cr.patch
 	patches.suse/usb-gadget-configfs-Fix-OOB-read-on-empty-string-wri.patch
