--- a/series.conf
+++ b/series.conf
@@ -24915,6 +24915,7 @@
 	patches.kabi/kABI-fix-for-net-defer-final-struct-net-free-in-netn.patch
 	patches.kabi/kABI-Fix-kABI-after-backport-CVE-2025-21839.patch
 	patches.kabi/ax25-rcu-protect-dev-ax25_ptr.patch
+	patches.kabi/kABI-fix-for-net-vlan-fix-VLAN-0-refcount-imbalance-.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
