--- a/series.conf
+++ b/series.conf
@@ -7991,6 +7991,7 @@
 	patches.suse/isofs-fix-KMSAN-uninit-value-bug-in-do_isofs_readdir.patch
 	patches.suse/udf-Fix-inode_getblk-return-value.patch
 	patches.suse/0001-mm-gup-reject-FOLL_SPLIT_PMD-with-hugetlb-VMAs.patch
+	patches.suse/0002-mm-rmap-reject-hugetlb-folios-in-folio_make_device_e.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
