--- a/series.conf
+++ b/series.conf
@@ -7994,6 +7994,7 @@
 	patches.suse/0002-mm-rmap-reject-hugetlb-folios-in-folio_make_device_e.patch
 	patches.suse/0003-mm-rmap-convert-make_device_exclusive_range-to-make_.patch
 	patches.suse/0004-mm-rmap-implement-make_device_exclusive-using-folio_.patch
+	patches.suse/0005-mm-memory-detect-writability-in-restore_exclusive_pt.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
