--- a/series.conf
+++ b/series.conf
@@ -7996,6 +7996,7 @@
 	patches.suse/0004-mm-rmap-implement-make_device_exclusive-using-folio_.patch
 	patches.suse/0005-mm-memory-detect-writability-in-restore_exclusive_pt.patch
 	patches.suse/0006-mm-use-single-SWP_DEVICE_EXCLUSIVE-entry-type.patch
+	patches.suse/0007-mm-page_vma_mapped-device-exclusive-entries-are-not-.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
