--- a/series.conf
+++ b/series.conf
@@ -7998,6 +7998,7 @@
 	patches.suse/0006-mm-use-single-SWP_DEVICE_EXCLUSIVE-entry-type.patch
 	patches.suse/0007-mm-page_vma_mapped-device-exclusive-entries-are-not-.patch
 	patches.suse/0008-kernel-events-uprobes-handle-device-exclusive-entrie.patch
+	patches.suse/0009-mm-ksm-handle-device-exclusive-entries-correctly-in-.patch
 	patches.suse/mm-simplify-vma-merge-structure-and-expand-comments.patch
 	patches.suse/mm-further-refactor-commit_merge.patch
 	patches.suse/mm-eliminate-adj_start-parameter-from-commit_merge.patch
